# CWIP

./: .gitignore  README.md  draft-atwood-cwip-00.md  draft-atwood-ham64-00.md  email-cwip-submission.txt  email-ham64-submission.txt  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
cwip/: __init__.py  fec.py  framing.py  ham64.py  linecode.py  modem.py
examples/: audio_loopback.py  loopback_demo.py  tun_bridge.py
rigs/: __init__.py  base.py  hamlib.py  ic7300.py
tests/: test_fec.py  test_framing.py  test_ham64.py
tools/: cwip_monitor.py
